--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ApartmentInfoApp</string>
+    <string name="title_activity_message">MessageActivity</string>
+    <string name="title_activity_review">ReviewActivity</string>
+    <string name="title_activity_about_us">AboutUsActivity</string>
 </resources>
